--- a/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj.filters
+++ b/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj.filters
@@ -91,6 +91,12 @@
     <ClInclude Include="..\stm32\stm32wbxx_ll_rtc.h">
       <Filter>stm32</Filter>
     </ClInclude>
+    <ClInclude Include="..\stm32\stm32wbxx_ll_tim.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\stm32\stm32wbxx_ll_crc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\programming.txt" />
