- moved consumer_producer_buffer.h to common utils - added safe means of accessing address of sensor values

--- a/software/common/lib-utils/prj-stm32l151ve/lib-utils-stm32l151ve.vcxproj
+++ b/software/common/lib-utils/prj-stm32l151ve/lib-utils-stm32l151ve.vcxproj
@@ -65,6 +65,7 @@
     <ClCompile Include="..\src\rolling_values.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\inc\consumer_producer_buffer.h" />
     <ClInclude Include="..\inc\math_utils.h" />
     <ClInclude Include="..\inc\rolling_values.h" />
   </ItemGroup>
