#26 - add code to receive BLE data from wireless line sensor

--- a/software/line-sensor-data-collector/line-sensor-data-collector.csproj
+++ b/software/line-sensor-data-collector/line-sensor-data-collector.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="logic\IWirelessLineSensor.cs" />
+    <Compile Include="logic\LineSensorData.cs" />
     <Compile Include="logic\PositionController.cs" />
     <Compile Include="logic\WirelessLineSensor.cs" />
     <Compile Include="shared\BaseCommandWithParameter.cs" />
