--- a/software/line-sensor-data-collector/line-sensor-data-collector.csproj
+++ b/software/line-sensor-data-collector/line-sensor-data-collector.csproj
@@ -138,7 +138,8 @@
     <Compile Include="ui\BleDeviceToggleScanningCommand.cs" />
     <Compile Include="ui\BleDeviceWatcher.cs" />
     <Compile Include="ui\CollectDataCommand.cs" />
-    <Compile Include="ui\ConnectedWirelessLineSensorDeviceModel.cs" />
+    <Compile Include="ui\position_controller\PositionControllerCalibrateCommand.cs" />
+    <Compile Include="ui\wireless_line_sensor\ConnectedWirelessLineSensorDeviceModel.cs" />
     <Compile Include="ui\ui_component\IUiComponent.cs" />
     <Compile Include="ui\position_controller\IPositionControllerDeviceModel.cs" />
     <Compile Include="ui\position_controller\PositionControllerDeviceModel.cs" />
@@ -157,6 +158,7 @@
     <Compile Include="ui\SerialDeviceModel.cs" />
     <Compile Include="ui\SerialDeviceWatcher.cs" />
     <Compile Include="ui\ui_component\UiComponent.cs" />
+    <Compile Include="ui\wireless_line_sensor\IWirelessLineSensorDeviceModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
