- moved interrupt masking functions into utils - fixed wireless line sensor release build

--- a/software/common/lib-utils/prj-stm32wb55rg/lib-utils-stm32wb55rg.vcxproj
+++ b/software/common/lib-utils/prj-stm32wb55rg/lib-utils-stm32wb55rg.vcxproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <ClInclude Include="..\inc\consumer_producer_buffer.h" />
     <ClInclude Include="..\inc\math_utils.h" />
+    <ClInclude Include="..\inc\mcu_arm.h" />
     <ClInclude Include="..\inc\rolling_values.h" />
   </ItemGroup>
   <ItemGroup>
