--- a/software/common/lib-utils/prj-stm32wb55rg/lib-utils-stm32wb55rg.vcxproj.filters
+++ b/software/common/lib-utils/prj-stm32wb55rg/lib-utils-stm32wb55rg.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="..\inc\rolling_values.h">
       <Filter>inc</Filter>
     </ClInclude>
+    <ClInclude Include="..\inc\mcu_arm.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\rolling_values.c">
