#36 - add command to rescan devices #25 - add code to stop / start BLE device scanning #14 - add code to disconnect devices when app is closed / suspended /etc. #13 - add code to disconnect from BLE device. Need to also listen to BLE device connection status change.

--- a/software/line-sensor-data-collector/line-sensor-data-collector.csproj
+++ b/software/line-sensor-data-collector/line-sensor-data-collector.csproj
@@ -159,6 +159,9 @@
     <Compile Include="ui\SerialDeviceWatcher.cs" />
     <Compile Include="ui\ui_component\UiComponent.cs" />
     <Compile Include="ui\wireless_line_sensor\IWirelessLineSensorDeviceModel.cs" />
+    <Compile Include="ui\wireless_line_sensor\WirelessLineSensorDisconnectCommand.cs" />
+    <Compile Include="ui\wireless_line_sensor\WirelessLineSensorResetLineSensorCommand.cs" />
+    <Compile Include="ui\wireless_line_sensor\WirelessLineSensorResetWirelessLineSensorCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
