--- a/software/position-controller/prj-stm32l496zg/main-position-controller-stm32l496zg.vcxproj.filters
+++ b/software/position-controller/prj-stm32l496zg/main-position-controller-stm32l496zg.vcxproj.filters
@@ -26,6 +26,7 @@
     <ClCompile Include="..\src\client_communication_uart.c" />
     <ClCompile Include="..\src\position_controller.c" />
     <ClCompile Include="..\src\client_communication_uart_stm32l496zg.c" />
+    <ClCompile Include="..\src\global_data_timer.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\gpio.h" />
@@ -37,5 +38,6 @@
     <ClInclude Include="..\src\client_communication_uart.h" />
     <ClInclude Include="..\src\position_controller.h" />
     <ClInclude Include="..\src\client_communication_uart_impl.h" />
+    <ClInclude Include="..\src\global_data_timer.h" />
   </ItemGroup>
 </Project>
