#51 - need to speed up and slow down stepper gradually instead of doing it at max speed all the time

--- a/software/position-controller/prj-stm32l496zg/main-position-controller-stm32l496zg.vcxproj
+++ b/software/position-controller/prj-stm32l496zg/main-position-controller-stm32l496zg.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="..\src\button.c" />
     <ClCompile Include="..\src\client_communication_uart.c" />
     <ClCompile Include="..\src\client_communication_uart_stm32l496zg.c" />
+    <ClCompile Include="..\src\errors.c" />
     <ClCompile Include="..\src\global_data.c" />
     <ClCompile Include="..\src\global_data_timer.c" />
     <ClCompile Include="..\src\gpio.c" />
